--- a/css/style.scss
+++ b/css/style.scss
@@ -257,6 +257,7 @@ footer {
         padding-top: 40px;
         li {
             padding: 0 30px;
+            list-style: none;
             a {
                 color: green;
                 text-shadow: 0 0 10px green;
